# tensorrt_learning

./: .gitignore  README.md
cpp_learn/move/: forward.cpp  move.cpp  test.cpp
cpp_learn/multi-thread/: no_used_future.cpp  tow_con.cpp  used_future.cpp  used_future_set.cpp
cpp_learn/multi-thread/objs/: condition_variable.cpp.mk  infer.cpp.mk  main.cpp.mk  package_task.cpp.mk  tow_con.cpp.mk  used_future.cpp.mk  used_future_set.cpp.mk  used_share_future_set.cpp.mk
cpp_learn/packaging/: main.cpp
cpp_learn/packaging/RAII/: main.cpp
demo/HRNet/: infer-onnxruntime.py  predict.py
demo/centernet/: centernet.py  export_onnx.py  infer-onnxruntime.py  mypredict.py  onnx_simplify.py  predict.py
demo/detr/: infer-onnxruntime.py  model.py  predict.py
demo/detr-main/: infer-onnxruntime.py  load_from_cpp.py  mypredict.py  tools.py
demo/detr-main/models/: detr.py  position_encoding.py  transformer.py
demo/detr_demo/: export_onnx.py  infer-onnxruntime.py  onnx_simplify.py  tools.py
demo/swin/: onnx_simplify.py
demo/unet/: .gitignore  README.md  predict.py  requirements.txt  unet.py
demo/vit/: export_onnx.py  infer-onnxruntime.py  onnx_simplify.py  predict.py
demo/yolov7/: detect.py  export_onnx.py  infer-onnxruntime.py  onnx_simplify.py
demo/yolov7/models/: yolo.py
demo/yolov7/utils/: datasets.py
onnx2trt/: Makefile  README.md  main-old.cpp  模型权重.md
onnx2trt/demo/HRNet/: predict.py  test.py
onnx2trt/demo/centernet/: centernet.py  infer-onnxruntime.py  info.md  mypredict.py  predict.py
onnx2trt/demo/swin/: export_onnx.py  infer-onnxruntime.py  model.py  onnx_simplify.py
onnx2trt/demo/unet/: export.py
onnx2trt/demo/yolov5/: detect-for-yolov5-6.0.sh  export-yolov5-6.0.sh  yolov5.cpp  yolov5.hpp
onnx2trt/objs/: main.cpp.mk
onnx2trt/objs/onnx-tensorrt/: LoopHelpers.cpp.mk  ModelImporter.cpp.mk  NvOnnxParser.cpp.mk  RNNHelpers.cpp.mk  ShapeTensor.cpp.mk  builtin_op_importers.cpp.mk  onnx2trt_utils.cpp.mk
onnx2trt/src/: main.cpp
paddle_code/swim-t/: Swimblock.py  swim_t.md
side_line/multi-thread/: readme.md
side_line/yolo5-6.0-ros/src/base/: CMakeLists.txt  code_info.txt  nodelet_plugins.xml  package.xml
side_line/yolo5-6.0-ros/src/base/srv/: RosImage.srv
side_line_learn/multi-thread/: used_share_future_set.cpp
side_line_learn/yolo5-6.0-ros/src/yolov5-server/: CMakeLists.txt
side_line_learn/yolo5-6.0-ros/src/yolov5-server/include/yolov5_server_nodelet/: yolov5_server_nodelet.h
side_line_learn/yolo5-6.0-ros/src/yolov5-server/launch/: yolov5_server_nodelet.launch
side_line_learn/yolo5-6.0-ros/src/yolov5-server/src/: yolov5_server_nodelet.cpp
side_linelearn/multi-thread/: async.cpp  fix_tow_con.cpp
side_linelearn/warpaffine-cuda/: CMakeLists.txt
side_linelearn/yolo5-6.0-ros/src/client/: CMakeLists.txt
sideline_learn/multi-thread/: 1.cpp  Makefile  one_con.cpp
sideline_learn/ncnn_multi_thread/: CMakeLists.txt  fastdet_test.cpp  multi_thead_infer.cpp
sideline_learn/ncnn_multi_thread/include/: fastdet.h  infer.hpp
sideline_learn/ncnn_multi_thread/src/: fastdet.cpp  infer.cpp
sideline_learn/tools/: pic2video2.py
sideline_learn/yolo5-6.0-ros/: README.md
sideline_learn/yolo5-6.0-ros/src/yolov5-6.0/: CMakeLists.txt
sideline_learn/yolo5-6.0-ros/src/yolov5-6.0/include/: basic_transform.h  yolov5-detect.h
sideline_learn/yolo5-6.0-ros/src/yolov5-6.0/src/: build_engine.cpp
srcipts/: nms.py
tensorrt_opt/detr/: model.py  tools.py
tensorrt_opt/onnx2trt/: Makefile  readme.md
tensorrt_opt/swin/: predict.py
tensorrt_opt/vit/: export_onnx.py  train.py  vit_model.py
tensorrt_opt/yolov5/: Makefile  detect-for-yolov5-6.0-change.sh  export-yolov5-6.0-change.sh
tool_learn/PixelShuffle/: PixelShuffle.py
tool_learn/multi-thread/: 0624.cpp
tool_learn/yolov5-6.0-TensorRT/: README.md  yolov5-6.0之tensorrt加速.md
transformer2tensorrt/swin/: predict_bak.py
trt_cpp/: CMakeLists.txt  Makefile  README.md  模型权重.md
trt_cpp/objs/: main.cpp.mk
trt_cpp/objs/onnx-tensorrt/: onnxErrorRecorder.cpp.mk
trt_cpp/objs/trt/builder/: trt-builder.cpp.mk
trt_cpp/objs/trt/demo-infer/: demo-infer.cpp.mk
trt_cpp/objs/trt/demo-infer/yolov5/: yolov5.cpp.mk
trt_cpp/onnx/: make_pb.sh
trt_cpp/src/: main.cpp
trt_cpp/src/onnx-tensorrt/: ConditionalHelpers.cpp  ConditionalHelpers.hpp  ImporterContext.hpp  ModelImporter.cpp  ModelImporter.hpp  ShapeTensor.cpp  ShapedWeights.cpp  TensorOrWeights.hpp  builtin_op_importers.cpp  common.hpp  onnx2trt.hpp  onnx2trt_utils.cpp  onnx2trt_utils.hpp  onnx_utils.hpp
trt_cpp/src/trt/common/: basic_tools.cu  basic_tools.hpp  cuda-tools.cpp  cuda-tools.hpp  matrix.cpp  matrix.hpp  trt-tensor.hpp
trt_cpp/src/trt/demo-infer/: demo-infer.cpp  demo-infer.cu  demo-infer.hpp
trt_cpp/src/trt/demo-infer/centernet/: centernet.cu  centernet.h
trt_cpp/src/trt/demo-infer/detr/: detr.cu  detr.h
trt_cpp/src/trt/demo-infer/hrnet/: hrnet.cu  hrnet.h
trt_cpp/src/trt/demo-infer/unet/: unet.cu  unet.h
trt_cpp/src/trt/demo-infer/vit/: vit.cu  vit.h
trt_cpp/src/trt/demo-infer/yolov5seg/: README.md  yolov5seg.cu  yolov5seg.cu_bak  yolov5seg.h
trt_cpp/src/trt/demo-infer/yolov7/: yolov7.cu  yolov7.h
trt_cpp/src/trt/infer/: trt-infer.cpp
trt_cpp/workspace/: demo-infer.txt
trt_py/: README.md  info.md
trt_py/basic_infer/: infer.py  infer_bak.py  transforms.py  warpaffine.py
trt_py/centernet/: CV学习笔记tensorrt之centernet加速.md  centernet_infer.py  centernet_infer_dynamci_batch.py
trt_py/detr/: detr_infer.py  detr_infer_dynamic_batch.py
trt_py/hrnet/: hrnet_inferece.py
trt_py/util/: util.py
trt_py/yolov5/: yolov5_infer.py
trt_py/yolov7/: infer-onnxruntime.py  yolov7_infer.py
warpaffine-cuda/include/: warpaffine.h
warpaffine-cuda/scripts/: warpaffine.py
warpaffine-cuda/src/: test.cpp
yolov5-6.0-TensorRT/tensorrtx/: CMakeLists.txt
yolov5-postprocess/: CMakeLists.txt  Makefile  Makefile.bak
yolov5-postprocess/include/: postprocess.h
yolov5-postprocess/objs/: postprocess.cu.mk  test.cpp.mk
yolov5-postprocess/src/: postprocess.cu  test.cpp
yolov5-postprocess/workspace/: pro
(+225 files in other folders)
